--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,9 @@
 ---
+title: "Beeswarm-style plots with ggplot2"
 output: 
   html_document: 
     keep_md: yes
-    toc: yes
+    toc: no
 ---
 ```{r setup, echo=FALSE, message=FALSE}
 knitr::opts_chunk$set(
@@ -11,8 +12,6 @@ knitr::opts_chunk$set(
   fig.height=4
 )
 ```
-
-# Beeswarm-style plots with ggplot2
 
 [![Build Status](https://travis-ci.org/eclarke/ggbeeswarm.svg?branch=master)](https://travis-ci.org/eclarke/ggbeeswarm)
 [![CRAN status](https://www.r-pkg.org/badges/version/ggbeeswarm)](https://cran.r-project.org/package=ggbeeswarm)
@@ -52,7 +51,7 @@ Here is a comparison between `geom_jitter` and `geom_quasirandom` on the `iris` 
 ```{r ggplot2-compare}
 set.seed(12345)
 library(ggplot2)
-library(ggbeeswarm)
+library(ggbeeswarm3)
 #compare to jitter
 ggplot(iris,aes(Species, Sepal.Length)) + geom_jitter()
 ggplot(iris,aes(Species, Sepal.Length)) + geom_quasirandom()
@@ -94,12 +93,12 @@ Using `geom_beeswarm`:
 ```{r ggplot2-beeswarm}
 
 ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm()
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(beeswarmArgs=list(side=1))
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(side = 1L)
 ggplot(mpg,aes(class, hwy)) + geom_beeswarm(size=.5)
 # With categorical y-axis
-ggplot(mpg,aes(hwy, class)) + geom_beeswarm(size=.5,groupOnX=FALSE)
+ggplot(mpg,aes(hwy, class)) + geom_beeswarm(size=.5)
 # Also watch out for points escaping from the plot with geom_beeswarm
-ggplot(mpg,aes(hwy, class)) + geom_beeswarm(size=.5,groupOnX=FALSE) + scale_y_discrete(expand=expand_scale(add=c(0.5,1)))
+ggplot(mpg,aes(hwy, class)) + geom_beeswarm(size=.5) + scale_y_discrete(expand=expansion(add=c(0.5,1)))
 
 ggplot(mpg,aes(class, hwy)) + geom_beeswarm(size=1.1)
 
@@ -110,10 +109,10 @@ ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.widt
 #With different beeswarm point distribution priority
 dat<-data.frame(x=rep(1:3,c(20,40,80)))
 dat$y<-rnorm(nrow(dat),dat$x)
-ggplot(dat,aes(x,y)) + geom_beeswarm(size=2) + ggtitle('Default (ascending)') + scale_x_continuous(expand=expand_scale(add=c(0.5,.5)))
-ggplot(dat,aes(x,y)) + geom_beeswarm(size=2,priority='descending') + ggtitle('Descending') + scale_x_continuous(expand=expand_scale(add=c(0.5,.5)))
-ggplot(dat,aes(x,y)) + geom_beeswarm(size=2,priority='density') + ggtitle('Density') + scale_x_continuous(expand=expand_scale(add=c(0.5,.5)))
-ggplot(dat,aes(x,y)) + geom_beeswarm(size=2,priority='random') + ggtitle('Random') + scale_x_continuous(expand=expand_scale(add=c(0.5,.5)))
+ggplot(dat,aes(x,y)) + geom_beeswarm(size=2) + ggtitle('Default (ascending)') + scale_x_continuous(expand=expansion(add=c(0.5,.5)))
+ggplot(dat,aes(x,y)) + geom_beeswarm(size=2,priority='descending') + ggtitle('Descending') + scale_x_continuous(expand=expansion(add=c(0.5,.5)))
+ggplot(dat,aes(x,y)) + geom_beeswarm(size=2,priority='density') + ggtitle('Density') + scale_x_continuous(expand=expansion(add=c(0.5,.5)))
+ggplot(dat,aes(x,y)) + geom_beeswarm(size=2,priority='random') + ggtitle('Random') + scale_x_continuous(expand=expansion(add=c(0.5,.5)))
 ```
 
 
