Revert temporary package rename

--- a/inst/doc/usageExamples.Rnw
+++ b/inst/doc/usageExamples.Rnw
@@ -3,8 +3,8 @@
 
 <<package,include=FALSE,echo=FALSE>>=
 options(keep.source = TRUE, width = 60)
-packageInfo <- packageDescription("ggbeeswarm3")
-library(ggbeeswarm3)
+packageInfo <- packageDescription("ggbeeswarm")
+library(ggbeeswarm)
 packageKeywords<-"visualization, display, one dimensional, grouped, groups, violin, scatter, points, quasirandom, beeswarm, van der Corput, beeswarm, ggplot, ggplot2"
 @
 %\VignetteIndexEntry{vipor package usage examples}
