--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,7 @@ Here is a comparison between `geom_jitter` and `geom_quasirandom` on the `iris` 
 ```{r ggplot2-compare}
 set.seed(12345)
 library(ggplot2)
-library(ggbeeswarm3)
+library(ggbeeswarm)
 #compare to jitter
 ggplot(iris,aes(Species, Sepal.Length)) + geom_jitter()
 ggplot(iris,aes(Species, Sepal.Length)) + geom_quasirandom()
