--- a/README.Rmd
+++ b/README.Rmd
@@ -102,7 +102,25 @@ ggplot(mpg,aes(class, hwy)) + geom_beeswarm(size=1.1)
 
 # With automatic dodging
 ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.width=0.5)
+```
 
+#### Alternative methods
+
+```{r}
+tg <- ToothGrowth
+tg$dose <- as.factor(tg$dose)
+ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5) + ggtitle('method = "swarm" (default)')
+ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "swarm2") + ggtitle('method = "swarm2"')
+ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "compactswarm") + ggtitle('method = "compactswarm"')
+ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "hex") + ggtitle('method = "hex"')
+ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "square") + ggtitle('method = "square"')
+ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "center") + ggtitle('method = "center"')
+```
+
+
+#### Different point distribution priority
+
+```{r}
 #With different beeswarm point distribution priority
 dat<-data.frame(x=rep(1:3,c(20,40,80)))
 dat$y<-rnorm(nrow(dat),dat$x)
