--- a/README.Rmd
+++ b/README.Rmd
@@ -106,21 +106,19 @@ ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.widt
 
 #### Alternative methods
 
-```{r}
-tg <- ToothGrowth
-tg$dose <- as.factor(tg$dose)
-ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5) + ggtitle('method = "swarm" (default)')
-ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "swarm2") + ggtitle('method = "swarm2"')
-ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "compactswarm") + ggtitle('method = "compactswarm"')
-ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "hex") + ggtitle('method = "hex"')
-ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "square") + ggtitle('method = "square"')
-ggplot(tg, aes(dose, len)) + geom_beeswarm(cex = 5, method = "center") + ggtitle('method = "center"')
+```{r ggplot2-beeswarm-alt}
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 2, size = 2) + ggtitle('method = "swarm" (default)')
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "swarm2") + ggtitle('method = "swarm2"')
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "compactswarm") + ggtitle('method = "compactswarm"')
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "hex") + ggtitle('method = "hex"')
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "square") + ggtitle('method = "square"')
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "center") + ggtitle('method = "center"')
 ```
 
 
 #### Different point distribution priority
 
-```{r}
+```{r ggplot2-priority}
 #With different beeswarm point distribution priority
 dat<-data.frame(x=rep(1:3,c(20,40,80)))
 dat$y<-rnorm(nrow(dat),dat$x)
