--- a/README.Rmd
+++ b/README.Rmd
@@ -107,12 +107,15 @@ ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.widt
 #### Alternative methods
 
 ```{r ggplot2-beeswarm-alt}
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 2, size = 2) + ggtitle('method = "swarm" (default)')
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "swarm2") + ggtitle('method = "swarm2"')
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "compactswarm") + ggtitle('method = "compactswarm"')
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "hex") + ggtitle('method = "hex"')
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "square") + ggtitle('method = "square"')
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex = 1.3, size = 2, method = "center") + ggtitle('method = "center"')
+df <- data.frame(
+  x = "A",
+  y = sample(1:100, 200, replace = TRUE)
+)
+ggplot(df, aes(x = x, y = y)) + geom_beeswarm(cex = 2.5, method = "swarm") + ggtitle('method = "swarm" (default)')
+ggplot(df, aes(x = x, y = y)) + geom_beeswarm(cex = 2.5, method = "compactswarm") + ggtitle('method = "compactswarm"')
+ggplot(df, aes(x = x, y = y)) + geom_beeswarm(cex = 2.5, method = "hex") + ggtitle('method = "hex"')
+ggplot(df, aes(x = x, y = y)) + geom_beeswarm(cex = 2.5, method = "square") + ggtitle('method = "square"')
+ggplot(df, aes(x = x, y = y)) + geom_beeswarm(cex = 2.5, method = "center") + ggtitle('method = "center"')
 ```
 
 
