--- a/vignettes/usageExamples.Rnw
+++ b/vignettes/usageExamples.Rnw
@@ -70,9 +70,9 @@ Factors can be used to generate custom group orderings:
 @
 \end{center}
 
-The axes can also be switched with a categorical y-axis using the argument \code{groupOnX=FALSE}:
+The axes can also be switched with a categorical y-axis:
 <<yaxis, echo=TRUE, eval=FALSE>>=
-  ggplot(mapping=aes(dat,labs)) + geom_quasirandom(aes(color=labs),groupOnX=FALSE)
+  ggplot(mapping=aes(dat,labs)) + geom_quasirandom(aes(color=labs))
 @
 \begin{center}
 <<showYaxis, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
@@ -93,7 +93,7 @@ And dodging can be used to compare within groups:
 Or on the y-axis:
 <<dodgey, echo=TRUE, eval=FALSE>>=
   labs2<-factor(rep(1:2,each=n))
-  ggplot(mapping=aes(dat,labs,color=labs2)) + geom_quasirandom(dodge.width=.8,groupOnX=FALSE)
+  ggplot(mapping=aes(dat,labs,color=labs2)) + geom_quasirandom(dodge.width=.8)
 @
 \begin{center}
 <<showDodgey, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
